Fix flag and username wrapping on newline

--- a/docs/style.css
+++ b/docs/style.css
@@ -331,6 +331,7 @@ body {
 
 .leaderboard td.col-player {
   text-align: left;
+  white-space: nowrap;
 }
 
 .leaderboard tbody tr {
